@@ -50,5 +50,6 @@ void line_mark_activated (GtkSourceGutter *gutter,GtkTextIter *iter,GdkEventButt
 void toggleBookmark(GtkWidget*,GtkTextIter* titer);
 void toggleBookMarkBar(GtkWidget* widget,gpointer data);
 void setToobarSensitive(void);
+void toggleToolBar(GtkWidget* widget,gpointer data);
 
 #endif
